manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kwikkoder-ingress
  namespace: kwikkoder
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # to use regex on my paths
    nginx.ingress.kubernetes.io/use-regex: "true"
    # also something about the path, rewriting the target, modifying the url
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # register cert issuer
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - www.kwikkoder.com
    secretName: tls-secret
  rules:
  - host: www.kwickkoder.com
    http:
      paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: website
              port:
                number: 4200
